<resources>
    <!--
    - Global
    -->
    <string name="app_name">Popular Movies</string>

    <string name="error_message">An error has occurred.</string>

    <string name="content_authority">sk.dejw.android.popularmovies</string>

    <!--
    - Menu
    -->

    <string name="action_settings">Settings</string>

    <string name="action_refresh">Refresh</string>

    <!--
    - Preferences
    -->

    <!-- SharePreferences Labels -->
    <string name="pref_sort_label">Sort by</string>
    <string name="pref_sort_label_popular">Popular</string>
    <string name="pref_sort_label_top_rated">Top Rated</string>
    <string name="pref_sort_label_favorites">Favorites</string>
    <!-- SharePreferences Keys -->
    <string name="pref_sort_key" translatable="false">sort_by</string>
    <string name="pref_sort_popular" translatable="false">popular</string>
    <string name="pref_sort_top_rated" translatable="false">top_rated</string>
    <string name="pref_sort_favorites" translatable="false">favorites</string>

    <!--
    - Detail
    -->

    <string name="movie_rating_label">Rating:</string>
    <string name="movie_release_date_label">Release Date:</string>
    <string name="movie_trailers_label">Trailers:</string>
    <string name="movie_reviews_label">Reviews:</string>

</resources>
