<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
    tools:context="sk.dejw.android.popularmovies.DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="@dimen/movie_image_width"
            android:layout_height="@dimen/movie_image_height"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/movie_detail_margin_end"
            android:layout_marginRight="@dimen/movie_detail_margin_right"
            android:layout_marginStart="@dimen/movie_detail_margin_start"
            android:layout_marginLeft="@dimen/movie_detail_margin_left"
            android:layout_marginTop="@dimen/movie_detail_margin_top"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/movie_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/movie_detail_margin_end"
            android:layout_marginRight="@dimen/movie_detail_margin_right"
            android:layout_marginStart="@dimen/movie_detail_margin_start"
            android:layout_marginLeft="@dimen/movie_detail_margin_left"
            android:layout_marginTop="@dimen/movie_detail_margin_top"
            android:text="@string/movie_rating_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/movie_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/movie_detail_margin_end"
            android:layout_marginRight="@dimen/movie_detail_margin_right"
            android:layout_marginStart="@dimen/movie_detail_margin_start"
            android:layout_marginLeft="@dimen/movie_detail_margin_left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_rating_label"
            app:layout_constraintTop_toTopOf="@+id/tv_rating_label" />

        <TextView
            android:id="@+id/tv_release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/movie_detail_margin_end"
            android:layout_marginRight="@dimen/movie_detail_margin_right"
            android:layout_marginStart="@dimen/movie_detail_margin_start"
            android:layout_marginLeft="@dimen/movie_detail_margin_left"
            android:layout_marginTop="@dimen/movie_detail_margin_top"
            android:text="@string/movie_release_date_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/movie_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/movie_detail_margin_end"
            android:layout_marginRight="@dimen/movie_detail_margin_right"
            android:layout_marginStart="@dimen/movie_detail_margin_start"
            android:layout_marginLeft="@dimen/movie_detail_margin_left"
            android:layout_marginTop="@dimen/movie_detail_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/movie_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date_label" />

        <ImageView
            android:id="@+id/iv_favorite_icon"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:layout_marginEnd="@dimen/movie_detail_margin_end"
            android:layout_marginRight="@dimen/movie_detail_margin_right"
            android:layout_marginStart="@dimen/movie_detail_margin_start"
            android:layout_marginLeft="@dimen/movie_detail_margin_left"
            android:layout_marginTop="@dimen/movie_detail_margin_top"
            tools:src="@drawable/ic_star_border_black_24dp"
            app:layout_constraintStart_toEndOf="@+id/movie_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

        <TextView
            android:id="@+id/tv_plot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/movie_detail_margin_end"
            android:layout_marginRight="@dimen/movie_detail_margin_right"
            android:layout_marginStart="@dimen/movie_detail_margin_start"
            android:layout_marginLeft="@dimen/movie_detail_margin_left"
            android:layout_marginTop="@dimen/movie_detail_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_image" />

        <View
            android:id="@+id/tv_trailers_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/divider_top_margin"
            android:layout_marginBottom="@dimen/divider_bottom_margin"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_plot" />

        <TextView
            android:id="@+id/tv_trailers_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/movie_detail_margin_end"
            android:layout_marginRight="@dimen/movie_detail_margin_right"
            android:layout_marginStart="@dimen/movie_detail_margin_start"
            android:layout_marginLeft="@dimen/movie_detail_margin_left"
            android:layout_marginTop="@dimen/movie_detail_margin_top"
            android:gravity="left"
            android:text="@string/movie_trailers_label"
            android:visibility="visible"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailers_divider" />

        <TextView
            android:id="@+id/tv_trailer_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/movie_detail_margin_end"
            android:layout_marginRight="@dimen/movie_detail_margin_right"
            android:layout_marginStart="@dimen/movie_detail_margin_start"
            android:layout_marginLeft="@dimen/movie_detail_margin_left"
            android:layout_marginTop="@dimen/movie_detail_margin_top"
            android:text="@string/error_message"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailers_label" />

        <ProgressBar
            android:id="@+id/pb_trailer_loading_indicator"
            android:layout_width="@dimen/progress_bar_width"
            android:layout_height="@dimen/progress_bar_height"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailers_label" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailers_label" />

        <View
            android:id="@+id/tv_reviews_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/divider_top_margin"
            android:layout_marginBottom="@dimen/divider_bottom_margin"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_trailers" />

        <TextView
            android:id="@+id/tv_reviews_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/movie_detail_margin_end"
            android:layout_marginRight="@dimen/movie_detail_margin_right"
            android:layout_marginStart="@dimen/movie_detail_margin_start"
            android:layout_marginLeft="@dimen/movie_detail_margin_left"
            android:layout_marginTop="@dimen/movie_detail_margin_top"
            android:gravity="left"
            android:text="@string/movie_reviews_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews_divider"/>

        <TextView
            android:id="@+id/tv_review_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/movie_detail_margin_end"
            android:layout_marginRight="@dimen/movie_detail_margin_right"
            android:layout_marginStart="@dimen/movie_detail_margin_start"
            android:layout_marginLeft="@dimen/movie_detail_margin_left"
            android:layout_marginTop="@dimen/movie_detail_margin_top"
            android:text="@string/error_message"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews_label" />

        <ProgressBar
            android:id="@+id/pb_review_loading_indicator"
            android:layout_width="@dimen/progress_bar_width"
            android:layout_height="@dimen/progress_bar_height"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews_label" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews_label" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>